--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -328,45 +329,56 @@ aside {
   grid-column: 3/-1; /* Coloca 'aside' a la derecha */
 }
 
-/* Styling the header */
 .share-header {
   display: grid;
-  grid-template-columns: 30px 650px auto 50px auto; /* Each one deciden the site  */
+  grid-template-columns: 0.5fr 1.5fr 0.3fr 0.5fr 1fr;
+  grid-template-rows: 1fr; /* rmb try use just one a 1fr */
+  margin-left: 29px;
+  margin-top: 20px;
   align-items: center;
-  margin: 3px 20px 0; /* shorthand for top, right, bottom, left */
+  grid-template-areas: "lupa input notification avatar user";
 }
 
-.material-symbols-outlined.icon-search {
+.icon-search {
+  grid-area: lupa;
   max-width: 20px;
-  grid-column: 1;
+  display: flex;
+  justify-content: flex-end; /* Alinea el contenido a la derecha */
+  background-color: red;
 }
 
 .search-input {
+  grid-area: input;
   grid-column: 2;
   border-radius: 10px;
+  width: 700px;
 }
 
-/* Styles for the notifications icon need to be chance cause it was 
-breaking the onther ones on the navbar */
+/* Styles for the notifications icon need to be changed */
 .material-symbols-outlined.icon-notifications {
+  grid-area: notification;
+  grid-column: 3;
   display: flex;
   justify-content: flex-end;
-  grid-column: 3;
   align-items: center;
 }
 
 /* the img */
 .user-avatar {
-  grid-column: 4;
+  grid-area: avatar;
+  grid-column: 4; /* Modificado */
   display: flex;
-  justify-content: flex-end;
-  margin-left: 20px;
+  align-items: center; /* Añadido para centrar verticalmente */
+  margin-left: 30px;
 }
 
 .user-name {
+  /* Modificado */
+  grid-area: user;
+  grid-column: 5/-1; /* Ocupa todas las columnas necesarias */
   display: flex;
   align-items: center;
-  justify-content: flex-end; /* Aligns the content to the right */
+  justify-content: flex-start; /* Alinea el contenido a la izquierda */
 }
 
 .share-header-down {
@@ -421,4 +433,55 @@ breaking the onther ones on the navbar */
 .material-symbols-outlined {
   font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
   color: white;
+}
+
+.container-section {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-template-rows: auto auto; /* Tres filas, la primera ocupada por h1, las otras por las cards */
+  gap: 10px; /* Ajusta el espacio entre las filas y columnas según tus preferencias */
+  grid-row-gap: 10px; /* Espacio vertical entre filas */
+  grid-column-gap: 10px; /* Espacio horizontal entre columnas */
+  padding: 10px; /* Padding alrededor de toda la cuadrícula */
+}
+.container-section h1 {
+  grid-area: 1/1/2/-1; /* Ocupa la primera fila y todas las columnas */
+  background-color: red;
+  border: none; /* Elimina cualquier borde */
+  padding: 0; /* Elimina cualquier relleno */
+  margin: 0;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: 10px auto;
+  grid-template-rows: auto auto;
+  border-radius: 10px;
+  grid-template-areas: "colum texto texto" "colum parafo icons";
+}
+
+.color-block {
+  background-color: red;
+  grid-area: colum/span 2; /* Abarca dos filas */
+  margin-left: -1px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+h2 {
+  margin-left: 10px;
+  grid-area: texto;
+}
+
+p {
+  margin-left: 10px;
+  grid-area: parafo;
+  line-height: 19px;
+}
+
+.icons {
+  grid-area: icons;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 10px;
 }/*# sourceMappingURL=app.css.map */
