added the conted, starting the model

--- a/src/layout/_section.scss
+++ b/src/layout/_section.scss
@@ -1,10 +1,14 @@
+.grid-container {
+    display: grid;
+    grid-template-columns: 2fr 1fr ; /* Dos columnas, una para la sección y otra para el aside */
+    gap: 20px; /* Espacio entre las columnas */
+  }
+
 .container-section {
     display: grid;
     grid-template-columns: 2fr 2fr ;
     grid-template-rows: auto auto ; /* Tres filas, la primera ocupada por h1, las otras por las cards */
     gap: 10px; /* Ajusta el espacio entre las filas y columnas según tus preferencias */
-
-
     grid-row-gap: 10px; /* Espacio vertical entre filas */
     grid-column-gap: 10px; /* Espacio horizontal entre columnas */
     padding: 10px; /* Padding alrededor de toda la cuadrícula */
@@ -26,7 +30,9 @@
     grid-template-columns: 10px auto  ;
     grid-template-rows: auto auto  ;
     border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     grid-template-areas: 
+    
         "colum texto texto"
         "colum parafo icons";
 }
@@ -59,4 +65,5 @@ p {
     justify-content: flex-end; 
     margin-bottom: 10px;
 }
+
 
