staring the final style

--- a/src/app.css
+++ b/src/app.css
@@ -328,7 +328,7 @@ aside {
 
 .share-header {
   display: grid;
-  grid-template-columns: 0.5fr 1.5fr 0.3fr 0.5fr 1fr;
+  grid-template-columns: 0.2fr 1.5fr 0.3fr 0.5fr 1fr;
   grid-template-rows: 1fr; /* rmb try use just one a 1fr */
   margin-left: 29px;
   margin-top: 20px;
@@ -341,7 +341,6 @@ aside {
   max-width: 20px;
   display: flex;
   justify-content: flex-end; /* Alinea el contenido a la derecha */
-  background-color: red;
 }
 
 .search-input {
@@ -395,6 +394,7 @@ aside {
 }
 .share-header-down .left-share .text-share p {
   margin-bottom: 0rem !important;
+  margin-left: 0px;
 }
 .share-header-down .left-share .text-share span {
   font-weight: 900;
@@ -443,13 +443,11 @@ aside {
   grid-template-columns: 2fr 2fr;
   grid-template-rows: auto auto; /* Tres filas, la primera ocupada por h1, las otras por las cards */
   gap: 10px; /* Ajusta el espacio entre las filas y columnas según tus preferencias */
-  grid-row-gap: 10px; /* Espacio vertical entre filas */
-  grid-column-gap: 10px; /* Espacio horizontal entre columnas */
+  grid-column-gap: 20px; /* Espacio horizontal entre columnas */
   padding: 10px; /* Padding alrededor de toda la cuadrícula */
 }
 .container-section h1 {
   grid-area: 1/1/2/-1; /* Ocupa la primera fila y todas las columnas */
-  background-color: red;
   border: none; /* Elimina cualquier borde */
   padding: 0; /* Elimina cualquier relleno */
   margin: 0;
@@ -461,6 +459,7 @@ aside {
   grid-template-rows: auto auto;
   border-radius: 10px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  margin-bottom: 10px;
   grid-template-areas: "colum texto texto" "colum parafo icons";
 }
 
