--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -1,6 +1,6 @@
 .share-header {
   display: grid;
-  grid-template-columns: 0.5fr 1.5fr 0.3fr 0.5fr 1fr;
+  grid-template-columns: 0.2fr 1.5fr 0.3fr 0.5fr 1fr;
   grid-template-rows: 1fr; /* rmb try use just one a 1fr */
   margin-left: 29px;
   margin-top: 20px;
@@ -14,7 +14,6 @@
   max-width: 20px;
   display: flex;
   justify-content: flex-end; /* Alinea el contenido a la derecha */
-  background-color: red;
 }
 
 .search-input {
@@ -58,7 +57,7 @@
 .share-header-down {
   display: grid;
   grid-template-columns: 2fr 1fr; // Two columns, one for each section
-padding-bottom: 10px;
+  padding-bottom: 10px;
   border-bottom: 1px solid $color3;
 
   .left-share {
@@ -72,6 +71,7 @@ padding-bottom: 10px;
 
       p {
         margin-bottom: 0rem !important;
+        margin-left: 0px;
       }
       span {
         font-weight: 900;
