--- a/src/layout/_grid.scss
+++ b/src/layout/_grid.scss
@@ -1,35 +1,33 @@
 .container-g {
-    display: grid;
-    grid-template-columns: 0.5fr 2fr 1fr; 
-    min-width: 100vh;
-    grid-template-areas: 
-        "nav header header"
-        "nav section aside"; /* Cambiado para colocar 'section' al lado de 'nav' */
+  display: grid;
+  grid-template-columns: 0.3fr 2fr 0.8fr;
+  min-width: 100vh;
+  grid-template-areas:
+    "nav header header"
+    "nav section aside"; /* change in case you need  'nav' */
 }
 
 header {
-    background: aqua;
-    grid-area: header;
-    grid-column: 2 / -1;
-
-
-    padding: 10px;
-    
+  background: $color3;
+  grid-area: header;
+  grid-column: 2 / -1;
+  padding: 10px;
+  border-bottom: 2px solid $color5;
 
 }
 
 nav {
-    grid-area: nav;
-    
+  grid-area: nav;
 }
 
 section {
-    background: rgb(165, 82, 82);
-    grid-area: section;
-    min-height: 100vh;
+  background: $color5;
+  grid-area: section;
+  min-height: 100vh;
 }
 
 aside {
-    background: #999;
-    grid-area: aside;
+  background: $color5;
+  grid-area: aside;
+  min-height: 100vh;
 }
