--- a/src/layout/_section.scss
+++ b/src/layout/_section.scss
@@ -24,9 +24,8 @@
       
         grid-area: 1 / 1 / 2 / -1; 
         border: none; 
-        padding: 0; 
-
-        margin: 0; 
+        text-align: center;
+        margin: auto;
     }
 }
 
@@ -40,12 +39,13 @@
     margin-bottom: 10px;
     grid-template-areas: 
     
+    
         "colum texto texto"
         "colum parafo icons";
 }
 
 .color-block {
-    background-color: red;
+   
     grid-area: colum / span 2; 
     margin-left: -1px;
     border-top-left-radius: 10px;
@@ -71,6 +71,25 @@ p {
     display: flex;
     justify-content: flex-end; 
     margin-bottom: 10px;
+    cursor: pointer;
+}
+
+
+/// this is the area for the img
+
+
+.image-container {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
